# math-tutor-agent

./: .env.example  PROJECT_SPEC.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: grpo.yaml  inference.yaml  paths.yaml  ppo.yaml  reward.yaml  sft.yaml
scripts/: eval_all.sh  prepare_reward_data.sh  prepare_sft_data.sh  run_grpo.sh  run_in_conda.ps1  run_ppo.sh  run_reward.sh  run_sft.sh  serve.sh
src/: __init__.py  main.py
src/agents/: prompts.py  routing.py  tutor_agent.py
src/data/: __init__.py  loaders.py  preprocess_reward.py  preprocess_rl.py  preprocess_sft.py  schemas.py
src/eval/: compare_rl.py  eval_gsm8k.py  eval_math500.py  metrics.py
src/inference/: __init__.py  benchmark.py  client.py  quantize_awq.py  serve_vllm.py
src/models/: lora_utils.py  merge_lora.py  model_utils.py  reward_model.py
src/rewards/: __init__.py  combined.py  correctness.py  format_reward.py  rlaif_reward.py
src/tools/: __init__.py
src/trainers/: __init__.py  llamafactory_runner.py  train_grpo.py  train_ppo.py  train_reward.py  train_sft.py
src/utils/: gpu_monitor.py  io.py  logging.py  profiling.py  seed.py
tests/: test_answer_extraction.py  test_configs.py  test_data_pipeline.py  test_llamafactory_runner.py  test_rewards.py
